 * The value type returned from a `StructBlock` can now be customised (LB (Ben Johnston))
 * Added `bgcolor` image operation (Karl Hobley)
 * Added `WAGTAILADMIN_USER_LOGIN_FORM` setting for overriding the admin login form (Mike Dingjan)
 * Snippets now support custom primary keys (Sævar Öfjörð Magnússon)
 * Upgraded jQuery to version 3.2.1 (Janneke Janssen)
 * Fix: Do not remove stopwords when generating slugs from non-ASCII titles, to avoid issues with incorrect word boundaries (Sævar Öfjörð Magnússon)
 * Fix: The PostgreSQL search backend now preserves ordering of the `QuerySet` when searching with `order_by_relevance=False` (Bertrand Bordage)
 * Fix: Using `modeladmin_register` as a decorator no longer replaces the decorated class with `None` (Tim Heap)
 * Fix: Fixed crash in XML sitemap generator when all pages on the site are private (Stein Strindhaug)
 * Fix: The `{% routablepageurl %}` template tag no longer generates invalid URLs when the `WAGTAIL_APPEND_SLASH` setting was set to `False` (Venelin Stoykov)
 * Fix: The "View live" button is no longer shown if the page doesn't have a routable URL (Tim Heap)
 * Fix: Fixed rendering of border on dropdown arrow buttons on Chrome (Bertrand Bordage)
 * Fix: Fixed incorrect z-index on userbar causing it to appear behind page content (Stein Strindhaug)
 * Fix: Form submissions pagination no longer looses date filter when changing page (Bertrand Bordage)
 * Fix: PostgreSQL search backend now removes duplicate page instances from the database (Bertrand Bordage)
 * Fix: `FormSubmissionsPanel` now recognises custom form submission classes (LB (Ben Johnston))
 * Fix: Prevent the footer and revisions link from unnecessarily collapsing on mobile (Jack Paine)
 * Fix: Empty searches were activated when paginating through images and documents (LB (Ben Johnston))
 * Fix: Summary numbers of pages, images and documents were not responsive when greater than 4 digits (Michael Palmer)