@@ -40,6 +40,7 @@ Other features
  * Added ``WAGTAILADMIN_USER_LOGIN_FORM`` setting for overriding the admin login form (Mike Dingjan)
  * Snippets now support custom primary keys (Sævar Öfjörð Magnússon)
  * Upgraded jQuery to version 3.2.1 (Janneke Janssen)
+ * Updated documentation styling (LB (Ben Johnston))
 
 Bug fixes
 ~~~~~~~~~
